# ai_translators

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  ENABLED_FEATURES.md  FIXES_APPLIED.md  README.md  SUBSCRIPTION_PERSISTENCE_FIX.md  create_test_image.py  fly.toml  package.json  railway.toml  test.txt  test_image.html  vercel.json
.claude/: settings.local.json
api/: backends.js
src/: ai_backends.rs  auth.rs  database.rs  image_export.rs  main.rs  ocr.rs  payments.rs  translation.rs
static/: app.js  index.html  style.css
static/js/: api.js  auth.js  components.js  config.js  dashboard.js  payments.js  state.js  translation.js  utils.js
